--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -29,30 +29,55 @@
         (ansible_os_family == "RedHat" and ansible_distribution_major_version | int >= 8)
     - name: 22.04 | Set fact
       ansible.builtin.set_fact:
+        misp_version: '2.4'
+        misp_pymisp_version: 'v2.4.200'
         misp_modules_enable: false
-      when: (ansible_distribution == "Ubuntu" and ansible_distribution_major_version | int == 22)
+        harden_apache_php74_debian_enable: true
+      when: (ansible_distribution == "Ubuntu" and ansible_distribution_major_version | int <= 22)
     - name: 24.04 | Set fact
       ansible.builtin.set_fact:
         misp_version: '2.5'
         misp_php_snuffleupagus_enable: false
         harden_php7_snuffleupagus: false
-        misp_modules_enable: false
       when: (ansible_distribution == "Ubuntu" and ansible_distribution_major_version | int >= 24)
   vars:
+    misp_local_base_url: "https://localhost"
+    misp_pymisp_base_url: "https://localhost"
+    misp_pymisp_verifycert: false
     misp_pymisp_validation_fatal: false
-    # need pymisp
-    misp_enable_feeds: []
-    misp_webusers_list: []
-    misp_testing: false
+    misp_testing: true
+    misp_testing_user: _misp
+    misp_testing_user_home: "/home/{{ misp_testing_user }}"
+    misp_testing_key_file: "{{ misp_key_file }}"
+    misp_base_url: "https://{{ ansible_default_ipv4.address | default(ansible_all_ipv4_addresses[0]) }}"
+    misp_base_ip: 127.0.0.1
+    misp_base_port: 443
+    misp_no_log: false
+    misp_webusers_list:
+      - { u: dupont@admin.test, p: 'dupont_passphrase.', email: dupont@localhost, org: 1, role: 2 }
+      - { u: dupond@admin.test, p: 'dupond_passphrase.', email: dupond@localhost, org: 1, role: 4 }
+    hardenwebserver_enable_defaultssl: false
+    harden_php_memory_limit: 2048M
     harden_php_allow_url_fopen: On
-    harden_php_disable_functions: 'pcntl_alarm,pcntl_fork,pcntl_waitpid,pcntl_wait,pcntl_wifexited,pcntl_wifstopped,pcntl_wifsignaled,pcntl_wexitstatus,pcntl_wtermsig,pcntl_wstopsig,pcntl_signal,pcntl_signal_dispatch,pcntl_get_last_error,pcntl_strerror,pcntl_sigprocmask,pcntl_sigwaitinfo,pcntl_sigtimedwait,pcntl_exec,pcntl_getpriority,pcntl_setpriority,chown,diskfreespace,disk_free_space,disk_total_space,dl,exec,escapeshellarg,escapeshellcmd,fileinode,highlight_file,max_execution_time,passthru,pclose,phpinfo,popen,proc_nice,proc_terminate,show_source,system,__construct, __destruct, __call,__wakeup'
+    harden_php_disable_functions: 'pcntl_alarm,pcntl_fork,pcntl_waitpid,pcntl_wait,pcntl_wifexited,pcntl_wifstopped,pcntl_wifsignaled,pcntl_wexitstatus,pcntl_wtermsig,pcntl_wstopsig,pcntl_signal,pcntl_signal_dispatch,pcntl_get_last_error,pcntl_strerror,pcntl_sigprocmask,pcntl_sigwaitinfo,pcntl_sigtimedwait,pcntl_exec,pcntl_getpriority,pcntl_setpriority,chown,diskfreespace,disk_free_space,disk_total_space,dl,exec,escapeshellcmd,fileinode,highlight_file,max_execution_time,passthru,pclose,phpinfo,popen,proc_nice,proc_terminate,show_source,system,__construct, __destruct, __call,__wakeup'
+    hardenwebserver_header_csp: ''  # done by MISP directly
+    harden_apache_stapling_enable: false
+    harden_apache_systemd_inaccessiblepaths: ''
+    harden_apache_modsecurity_lines:
+      ## https://isc.sans.edu/diary/Tracking+HTTP+POST+data+with+ELK/20345
+      - { re: '^SecRule REQUEST_METHOD POST id:1000,', l: 'SecRule REQUEST_METHOD POST id:1000,phase:2,ctl:auditEngine=On,nolog,pass' }
+      ## https://github.com/SpiderLabs/ModSecurity/wiki/Reference-Manual#sanitiseArg
+      - { re: '^SecAction nolog,phase:2,id:131,', l: 'SecAction nolog,phase:2,id:131,sanitiseArg:password,sanitiseArg:newPassword,sanitiseArg:oldPassword' }
+      - { re: '^SecTmpDir .*', l: 'SecTmpDir /tmp/modsectmp' }
+      - { re: '^SecDataDir .*', l: 'SecDataDir /tmp/modsecdata' }
+      # `grep ModSecurity /var/log/apache2/misp.local_error.log | sed 's/.*id "\([0-9]*\)".*/\1/' | sort | uniq -c`
+      # Host header is a numeric IP address
+      - { re: '^SecRuleRemoveById 920350', l: 'SecRuleRemoveById 920350' }
     misp_php_snuffleupagus_enable: true
     harden_php7_snuffleupagus: true
     harden_php7_snuffleupagus_rules_template: 'misp-snuffleupagus-rules.ini.j2'
-    harden_apache_php_variants: ['apache2']
-    harden_apache_php74_debian_enable: true
+    harden_apache_php_variants: ['apache2', 'cli']
     harden_apache_php74_rhel9_enable: true
-    misp_no_log: false
   roles:
     - { role: juju4.redhat_epel, when: ansible_os_family == 'RedHat' }
     - juju4.harden_apache
