fix(misp24): also curl_tests_GH.sh

--- a/vars/misp24.yml
+++ b/vars/misp24.yml
@@ -8,7 +8,7 @@ misp_php_harden_patches:
     - { s: patch-app-Lib-Cackephp-lib-Cake-Model-Datasource-Database-Mysql_php, b: "{{ misp_rootdir }}/app/Lib/cakephp/lib/Cake/Model/Datasource/Database" }
     - { s: patch-app-Lib-Cackephp-lib-Cake-Model-Datasource-DboSource_php, b: "{{ misp_rootdir }}/app/Lib/cakephp/lib/Cake/Model/Datasource" }
     - { s: patch-app-Lib-Cackephp-lib-cakephp-lib-Cake-Model-Datasource-CakeSession_php, b: "{{ misp_rootdir }}/app/Lib/cakephp/lib/Cake/Model/Datasource" }
-misp_curl_tests: "{{ misp_rootdir }}/tests/curl_tests.sh"
+misp_curl_tests: "{{ misp_rootdir }}/tests/curl_tests_GH.sh"
 
 misp_config_src: "{{ misp_rootdir }}/INSTALL/setup/config.php"
 misp_config_dest: "{{ misp_rootdir }}/app/Plugin/CakeResque/Config/config.php"
