--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -73,7 +73,7 @@
       # `grep ModSecurity /var/log/apache2/misp.local_error.log | sed 's/.*id "\([0-9]*\)".*/\1/' | sort | uniq -c`
       # Host header is a numeric IP address
       - { re: '^SecRuleRemoveById 920350', l: 'SecRuleRemoveById 920350' }
-    misp_php_snuffleupagus_enable: true
+    misp_php_snuffleupagus_enable: false
     harden_php7_snuffleupagus: true
     harden_php7_snuffleupagus_rules_template: 'misp-snuffleupagus-rules.ini.j2'
     harden_apache_php_variants: ['apache2', 'cli']
