set PHP session path

--- a/tasks/redhat.yml
+++ b/tasks/redhat.yml
@@ -86,6 +86,7 @@
         - { re: '^;listen.group = nobody', rep: 'listen.group = {{ fpm_user }}' }
         - { re: '^listen.owner = .*$', rep: 'listen.owner = {{ fpm_user }}' }
         - { re: '^listen.group = .*$', rep: 'listen.group = {{ fpm_user }}' }
+        - { re: '^php_value\[session\.save_path] *= .*$', rep: 'php_value[session.save_path] = {{ misp_rootdir }}/app/tmp/sessions' }
       notify:
         - Restart php-fpm
 
