--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -36,6 +36,7 @@
     - misp_version == '2.5'
     - not (ansible_distribution == 'Ubuntu' and ansible_distribution_major_version | int >= 24)
     - not (ansible_distribution == 'Debian' and ansible_distribution_major_version | int >= 12)
+    - ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
 
 - name: Import debian
   ansible.builtin.import_tasks: debian.yml
