ci(default): add almalinux:10-kitten as experimental

--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -27,6 +27,9 @@ jobs:
           - molecule_ditro: 'debian:bullseye'
             experimental: false
             suite: default
+          - molecule_distro: 'almalinux:10-kitten'
+            experimental: true
+            suite: default
           - molecule_distro: 'rockylinux:9'
             experimental: true
             suite: default
