--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -21,12 +21,6 @@ jobs:
       max-parallel: 4
       matrix:
         include:
-          - molecule_ditro: 'debian:bookworm'
-            experimental: false
-            suite: default
-          - molecule_ditro: 'debian:bullseye'
-            experimental: false
-            suite: default
           - molecule_distro: 'almalinux:10-kitten'
             experimental: true
             suite: default
@@ -37,6 +31,15 @@ jobs:
             experimental: true
             suite: default
           - molecule_distro: 'ubuntu:22.04'
+            experimental: false
+            suite: default
+          - molecule_distro: 'debian:trixie-slim'
+            experimental: true
+            suite: default
+          - molecule_distro: 'debian:12'
+            experimental: false
+            suite: default
+          - molecule_distro: 'debian:11'
             experimental: false
             suite: default
     env:
