--- a/tasks/redhat.yml
+++ b/tasks/redhat.yml
@@ -8,10 +8,11 @@
   register: pkg_result
   until: pkg_result is success
 
-## for php-redis
 - name: Import redhat-remi
   ansible.builtin.import_tasks: redhat-remi.yml
-  when: ansible_os_family == "RedHat"
+  when:
+    - ansible_os_family == "RedHat"
+    - ansible_distribution_major_version | int == 9
 
 - name: RedHat9 | Enable PowerTools repo
   ansible.builtin.command:  # noqa no-changed-when
