--- a/tasks/redhat.yml
+++ b/tasks/redhat.yml
@@ -47,6 +47,9 @@
     state: absent
   register: pkg_result
   until: pkg_result is success
+  when:
+    # dnf depends on curl-minimal on 10
+    - ansible_distribution_major_version | int < 10
 
 - name: Redhat | MISP dependencies install
   ansible.builtin.dnf:
