--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -27,6 +27,18 @@
       when: >
         (ansible_distribution == "Ubuntu" and ansible_distribution_major_version | int >= 16) or
         (ansible_os_family == "RedHat" and ansible_distribution_major_version | int >= 8)
+    - name: RedHat | Ensure ps is present
+      ansible.builtin.package:
+        name:
+          - procps-ng
+        state: present
+      when: ansible_os_family == "RedHat" and ansible_distribution_major_version | int >= 8
+    - name: Debian | Ensure ps is present
+      ansible.builtin.package:
+        name:
+          - procps
+        state: present
+      when: ansible_os_family == "Debian"
     - name: 22.04 | Set fact
       ansible.builtin.set_fact:
         misp_version: '2.4'
