--- a/tasks/mysql-configure.yml
+++ b/tasks/mysql-configure.yml
@@ -56,7 +56,7 @@
     backup: yes
   when: ansible_distribution_major_version == '7'
 
-- name: Importing mysql misp db template
+- name: Ubuntu | Importing mysql misp db template
   community.mysql.mysql_db:
     name: misp
     state: import
@@ -64,9 +64,19 @@
     login_user: "{{ misp_mysql_user | default(omit) }}"
     login_password: "{{ misp_mysql_pass | default(omit) }}"
   no_log: "{{ misp_no_log }}"
-  become: yes
-  become_user: mysql
-  when: not mispdbloaded.stat.exists
+  when:
+    - not mispdbloaded.stat.exists
+    - ansible_distribution == 'Ubuntu'
+- name: Non-Ubuntu | Importing mysql misp db template - sock
+  community.mysql.mysql_db:
+    name: misp
+    state: import
+    target: "{{ misp_rootdir }}/INSTALL/MYSQL.sql"
+    login_unix_socket: "/var/lib/mysql/mysql.sock"
+  no_log: "{{ misp_no_log }}"
+  when:
+    - not mispdbloaded.stat.exists
+    - ansible_distribution != 'Ubuntu'
 - name: Add marker for mysql import
   ansible.builtin.file:
     dest: /root/.mysql_misp_imported
