ci(debian): update apt cache for procps (2)

--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -31,6 +31,7 @@
       ansible.builtin.apt:
         update_cache: yes
         cache_valid_time: 3600
+      when: ansible_os_family == "Debian"
     - name: RedHat | Ensure ps is present
       ansible.builtin.package:
         name:
