--- a/tasks/mysql-configure.yml
+++ b/tasks/mysql-configure.yml
@@ -15,113 +15,15 @@
   changed_when: false
   failed_when: false
 
-- name: Ubuntu - Database initialization
+- name: Ubuntu - login
+  ansible.builtin.import_tasks: mysql-configure-login.yml
   when:
     - ansible_distribution == 'Ubuntu'
-  block:
-    - name: Creating mysql misp db
-      community.mysql.mysql_db:
-        name: misp
-        state: present
-        login_user: "{{ misp_mysql_user | default(omit) }}"
-        login_password: "{{ misp_mysql_pass | default(omit) }}"
-      no_log: "{{ misp_no_log }}"
-  rescue:
-    - name: Ensure db user has not empty password
-      community.mysql.mysql_user:
-        name: "{{ misp_mysql_user }}"
-        password: "{{ misp_mysql_pass }}"
-        state: present
-        login_user: "{{ misp_mysql_user }}"
-        login_password: ""
-      when:
-        - misp_mysql_user is defined and misp_mysql_user|length > 0
-        - misp_mysql_pass is defined and misp_mysql_pass|length > 0
-    - name: Creating mysql misp db
-      community.mysql.mysql_db:
-        name: misp
-        state: present
-        login_user: "{{ misp_mysql_user | default(omit) }}"
-        login_password: "{{ misp_mysql_pass | default(omit) }}"
-      no_log: "{{ misp_no_log }}"
 
-- name: Non-Ubuntu - Database initialization
+- name: Non-Ubuntu - socket
+  ansible.builtin.import_tasks: mysql-configure-socket.yml
   when:
     - ansible_distribution != 'Ubuntu'
-  block:
-    - name: Creating mysql misp db
-      community.mysql.mysql_db:
-        name: misp
-        state: present
-        login_unix_socket: "{{ misp_mysql_socket }}"
-      no_log: "{{ misp_no_log }}"
-  rescue:
-    - name: Ensure db user has not empty password
-      community.mysql.mysql_user:
-        name: "{{ misp_mysql_user }}"
-        password: "{{ misp_mysql_pass }}"
-        state: present
-        login_unix_socket: "{{ misp_mysql_socket }}"
-      when:
-        - misp_mysql_user is defined and misp_mysql_user|length > 0
-        - misp_mysql_pass is defined and misp_mysql_pass|length > 0
-    - name: Creating mysql misp db
-      community.mysql.mysql_db:
-        name: misp
-        state: present
-        login_unix_socket: "{{ misp_mysql_socket }}"
-      no_log: "{{ misp_no_log }}"
-
-- name: Check if mysql import done
-  ansible.builtin.stat:
-    path: /root/.mysql_misp_imported
-  register: mispdbloaded
-
-- name: Pre-mysql5.6 | force MyISAM mysql engine to support FULLTEXT indexes
-  ansible.builtin.replace:
-    dest: "{{ misp_rootdir }}/INSTALL/MYSQL.sql"
-    regexp: "ENGINE=\\w+"
-    replace: "ENGINE=MyISAM"
-    mode: '0644'
-    backup: yes
-  when: ansible_distribution_major_version == '7'
-
-- name: Ubuntu | Importing mysql misp db template
-  community.mysql.mysql_db:
-    name: misp
-    state: import
-    target: "{{ misp_rootdir }}/INSTALL/MYSQL.sql"
-    login_user: "{{ misp_mysql_user | default(omit) }}"
-    login_password: "{{ misp_mysql_pass | default(omit) }}"
-  no_log: "{{ misp_no_log }}"
-  when:
-    - not mispdbloaded.stat.exists
-    - ansible_distribution == 'Ubuntu'
-- name: Non-Ubuntu | Importing mysql misp db template - sock
-  community.mysql.mysql_db:
-    name: misp
-    state: import
-    target: "{{ misp_rootdir }}/INSTALL/MYSQL.sql"
-    login_unix_socket: "{{ misp_mysql_socket }}"
-  no_log: "{{ misp_no_log }}"
-  when:
-    - not mispdbloaded.stat.exists
-    - ansible_distribution != 'Ubuntu'
-- name: Add marker for mysql import
-  ansible.builtin.file:
-    dest: /root/.mysql_misp_imported
-    mode: '0600'
-    state: touch
-  when: not mispdbloaded.stat.exists
-- name: Creating mysql misp db user
-  community.mysql.mysql_user:
-    name: "{{ misp_db_user }}"
-    password: "{{ misp_db_pass }}"
-    priv: "*.*:USAGE/misp.*:ALL"
-    state: present
-    login_user: "{{ misp_mysql_user | default(omit) }}"
-    login_password: "{{ misp_mysql_pass | default(omit) }}"
-  no_log: "{{ misp_no_log }}"
 
 - name: Ubuntu xenial
   when: ansible_distribution_release == 'xenial'
